src/grammar/mdParser.ts
// Generated from src/grammar/mdParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { mdParserListener } from "./mdParserListener";
import { mdParserVisitor } from "./mdParserVisitor";


export class mdParser extends Parser {
	public static readonly MD_TITLE_TAG = 1;
	public static readonly HASHTAG = 2;
	public static readonly SPACE = 3;
	public static readonly LRBRACKET = 4;
	public static readonly RRBRACKET = 5;
	public static readonly LSBRACKET = 6;
	public static readonly RSBRACKET = 7;
	public static readonly COLON = 8;
	public static readonly SLASH = 9;
	public static readonly COLON_DOUBLE_SLASH = 10;
	public static readonly DOUBLE_COLON = 11;
	public static readonly DOT = 12;
	public static readonly AT = 13;
	public static readonly QUESTION_MARK = 14;
	public static readonly AND = 15;
	public static readonly EQUAL = 16;
	public static readonly WS = 17;
	public static readonly DIGITS = 18;
	public static readonly HEX = 19;
	public static readonly STRING = 20;
	public static readonly RULE_md = 0;
	public static readonly RULE_mdItem = 1;
	public static readonly RULE_title = 2;
	public static readonly RULE_link = 3;
	public static readonly RULE_url = 4;
	public static readonly RULE_scheme = 5;
	public static readonly RULE_host = 6;
	public static readonly RULE_hostname = 7;
	public static readonly RULE_v6host = 8;
	public static readonly RULE_port = 9;
	public static readonly RULE_path = 10;
	public static readonly RULE_login = 11;
	public static readonly RULE_user = 12;
	public static readonly RULE_password = 13;
	public static readonly RULE_query = 14;
	public static readonly RULE_search = 15;
	public static readonly RULE_searchparameter = 16;
	public static readonly RULE_frag = 17;
	public static readonly RULE_string = 18;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"md", "mdItem", "title", "link", "url", "scheme", "host", "hostname",
		"v6host", "port", "path", "login", "user", "password", "query", "search",
		"searchparameter", "frag", "string",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, "'#'", "' '", "'('", "')'", "'['", "']'", "':'",
		"'/'", undefined, "'::'", "'.'", "'@'", "'?'", "'&'", "'='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "MD_TITLE_TAG", "HASHTAG", "SPACE", "LRBRACKET", "RRBRACKET",
		"LSBRACKET", "RSBRACKET", "COLON", "SLASH", "COLON_DOUBLE_SLASH", "DOUBLE_COLON",
		"DOT", "AT", "QUESTION_MARK", "AND", "EQUAL", "WS", "DIGITS", "HEX", "STRING",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(mdParser._LITERAL_NAMES, mdParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return mdParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "mdParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return mdParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return mdParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(mdParser._ATN, this);
	}
	// @RuleVersion(0)
	public md(): MdContext {
		let _localctx: MdContext = new MdContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, mdParser.RULE_md);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 39;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 38;
				this.mdItem();
				}
				}
				this.state = 41;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === mdParser.MD_TITLE_TAG || _la === mdParser.LSBRACKET);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public mdItem(): MdItemContext {
		let _localctx: MdItemContext = new MdItemContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, mdParser.RULE_mdItem);
		try {
			this.state = 45;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case mdParser.MD_TITLE_TAG:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 43;
				this.title();
				}
				break;
			case mdParser.LSBRACKET:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 44;
				this.link();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public title(): TitleContext {
		let _localctx: TitleContext = new TitleContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, mdParser.RULE_title);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 47;
			this.match(mdParser.MD_TITLE_TAG);
			this.state = 49;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 48;
				this.match(mdParser.SPACE);
				}
				}
				this.state = 51;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === mdParser.SPACE);
			this.state = 53;
			this.string();
			this.state = 54;
			this.match(mdParser.WS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public link(): LinkContext {
		let _localctx: LinkContext = new LinkContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, mdParser.RULE_link);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 56;
			this.match(mdParser.LSBRACKET);
			this.state = 57;
			this.string();
			this.state = 58;
			this.match(mdParser.RSBRACKET);
			this.state = 59;
			this.match(mdParser.LRBRACKET);
			this.state = 60;
			this.url();
			this.state = 61;
			this.match(mdParser.RRBRACKET);
			this.state = 62;
			this.match(mdParser.WS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public url(): UrlContext {
		let _localctx: UrlContext = new UrlContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, mdParser.RULE_url);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 64;
			this.scheme();
			this.state = 65;
			this.match(mdParser.COLON_DOUBLE_SLASH);
			this.state = 67;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				{
				this.state = 66;
				this.login();
				}
				break;
			}
			this.state = 69;
			this.host();
			this.state = 72;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mdParser.COLON) {
				{
				this.state = 70;
				this.match(mdParser.COLON);
				this.state = 71;
				this.port();
				}
			}

			this.state = 78;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mdParser.SLASH) {
				{
				this.state = 74;
				this.match(mdParser.SLASH);
				this.state = 76;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === mdParser.DIGITS || _la === mdParser.STRING) {
					{
					this.state = 75;
					this.path();
					}
				}

				}
			}

			this.state = 81;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mdParser.QUESTION_MARK) {
				{
				this.state = 80;
				this.query();
				}
			}

			this.state = 84;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mdParser.HASHTAG) {
				{
				this.state = 83;
				this.frag();
				}
			}

			this.state = 87;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mdParser.WS) {
				{
				this.state = 86;
				this.match(mdParser.WS);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public scheme(): SchemeContext {
		let _localctx: SchemeContext = new SchemeContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, mdParser.RULE_scheme);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 89;
			this.match(mdParser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public host(): HostContext {
		let _localctx: HostContext = new HostContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, mdParser.RULE_host);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 92;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mdParser.SLASH) {
				{
				this.state = 91;
				this.match(mdParser.SLASH);
				}
			}

			this.state = 94;
			this.hostname();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public hostname(): HostnameContext {
		let _localctx: HostnameContext = new HostnameContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, mdParser.RULE_hostname);
		let _la: number;
		try {
			this.state = 108;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case mdParser.DIGITS:
			case mdParser.STRING:
				_localctx = new DomainNameOrIPv4HostContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 96;
				this.string();
				this.state = 101;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === mdParser.DOT) {
					{
					{
					this.state = 97;
					this.match(mdParser.DOT);
					this.state = 98;
					this.string();
					}
					}
					this.state = 103;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			case mdParser.LSBRACKET:
				_localctx = new IPv6HostContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 104;
				this.match(mdParser.LSBRACKET);
				this.state = 105;
				this.v6host();
				this.state = 106;
				this.match(mdParser.RSBRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public v6host(): V6hostContext {
		let _localctx: V6hostContext = new V6hostContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, mdParser.RULE_v6host);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mdParser.DOUBLE_COLON) {
				{
				this.state = 110;
				this.match(mdParser.DOUBLE_COLON);
				}
			}

			this.state = 113;
			this.string();
			this.state = 118;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mdParser.COLON || _la === mdParser.DOUBLE_COLON) {
				{
				{
				this.state = 114;
				_la = this._input.LA(1);
				if (!(_la === mdParser.COLON || _la === mdParser.DOUBLE_COLON)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 115;
				this.string();
				}
				}
				this.state = 120;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public port(): PortContext {
		let _localctx: PortContext = new PortContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, mdParser.RULE_port);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			this.match(mdParser.DIGITS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public path(): PathContext {
		let _localctx: PathContext = new PathContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, mdParser.RULE_path);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.string();
			this.state = 128;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 15, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 124;
					this.match(mdParser.SLASH);
					this.state = 125;
					this.string();
					}
					}
				}
				this.state = 130;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 15, this._ctx);
			}
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mdParser.SLASH) {
				{
				this.state = 131;
				this.match(mdParser.SLASH);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public login(): LoginContext {
		let _localctx: LoginContext = new LoginContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, mdParser.RULE_login);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 134;
			this.user();
			this.state = 137;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mdParser.COLON) {
				{
				this.state = 135;
				this.match(mdParser.COLON);
				this.state = 136;
				this.password();
				}
			}

			this.state = 139;
			this.match(mdParser.AT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public user(): UserContext {
		let _localctx: UserContext = new UserContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, mdParser.RULE_user);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 141;
			this.string();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public password(): PasswordContext {
		let _localctx: PasswordContext = new PasswordContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, mdParser.RULE_password);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 143;
			this.string();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public query(): QueryContext {
		let _localctx: QueryContext = new QueryContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, mdParser.RULE_query);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this.match(mdParser.QUESTION_MARK);
			this.state = 146;
			this.search();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public search(): SearchContext {
		let _localctx: SearchContext = new SearchContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, mdParser.RULE_search);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 148;
			this.searchparameter();
			this.state = 153;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === mdParser.AND) {
				{
				{
				this.state = 149;
				this.match(mdParser.AND);
				this.state = 150;
				this.searchparameter();
				}
				}
				this.state = 155;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public searchparameter(): SearchparameterContext {
		let _localctx: SearchparameterContext = new SearchparameterContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, mdParser.RULE_searchparameter);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this.string();
			this.state = 162;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === mdParser.EQUAL) {
				{
				this.state = 157;
				this.match(mdParser.EQUAL);
				this.state = 160;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case mdParser.DIGITS:
				case mdParser.STRING:
					{
					this.state = 158;
					this.string();
					}
					break;
				case mdParser.HEX:
					{
					this.state = 159;
					this.match(mdParser.HEX);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public frag(): FragContext {
		let _localctx: FragContext = new FragContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, mdParser.RULE_frag);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			this.match(mdParser.HASHTAG);
			this.state = 165;
			this.string();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public string(): StringContext {
		let _localctx: StringContext = new StringContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, mdParser.RULE_string);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 167;
			_la = this._input.LA(1);
			if (!(_la === mdParser.DIGITS || _la === mdParser.STRING)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!mdParser.__ATN) {
			mdParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(mdParser._serializedATN));
		}

		return mdParser.__ATN;
	}

}

export class MdContext extends ParserRuleContext {
	public mdItem(): MdItemContext[];
	public mdItem(i: number): MdItemContext;
	public mdItem(i?: number): MdItemContext | MdItemContext[] {
		if (i === undefined) {
			return this.getRuleContexts(MdItemContext);
		} else {
			return this.getRuleContext(i, MdItemContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return mdParser.RULE_md; }
	// @Override
	public enterRule(listener: mdParserListener): void {
		if (listener.enterMd) {
			listener.enterMd(this);
		}
	}
	// @Override
	public exitRule(listener: mdParserListener): void {
		if (listener.exitMd) {
			listener.exitMd(this);
		}
	}
	// @Override
	public accept<Result>(visitor: mdParserVisitor<Result>): Result {
		if (visitor.visitMd) {
			return visitor.visitMd(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class MdItemContext extends ParserRuleContext {
	public title(): TitleContext | undefined {
		return this.tryGetRuleContext(0, TitleContext);
	}
	public link(): LinkContext | undefined {
		return this.tryGetRuleContext(0, LinkContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return mdParser.RULE_mdItem; }
	// @Override
	public enterRule(listener: mdParserListener): void {
		if (listener.enterMdItem) {
			listener.enterMdItem(this);
		}
	}
	// @Override
	public exitRule(listener: mdParserListener): void {
		if (listener.exitMdItem) {
			listener.exitMdItem(this);
		}
	}
	// @Override
	public accept<Result>(visitor: mdParserVisitor<Result>): Result {
		if (visitor.visitMdItem) {
			return visitor.visitMdItem(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class TitleContext extends ParserRuleContext {
	public MD_TITLE_TAG(): TerminalNode { return this.getToken(mdParser.MD_TITLE_TAG, 0); }
	public string(): StringContext {
		return this.getRuleContext(0, StringContext);
	}
	public WS(): TerminalNode { return this.getToken(mdParser.WS, 0); }
	public SPACE(): TerminalNode[];
	public SPACE(i: number): TerminalNode;
	public SPACE(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(mdParser.SPACE);
		} else {
			return this.getToken(mdParser.SPACE, i);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return mdParser.RULE_title; }
	// @Override
	public enterRule(listener: mdParserListener): void {
		if (listener.enterTitle) {
			listener.enterTitle(this);
		}
	}
	// @Override
	public exitRule(listener: mdParserListener): void {
		if (listener.exitTitle) {
			listener.exitTitle(this);
		}
	}
	// @Override
	public accept<Result>(visitor: mdParserVisitor<Result>): Result {
		if (visitor.visitTitle) {
			return visitor.visitTitle(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class LinkContext extends ParserRuleContext {
	public LSBRACKET(): TerminalNode { return this.getToken(mdParser.LSBRACKET, 0); }
	public string(): StringContext {
		return this.getRuleContext(0, StringContext);
	}
	public RSBRACKET(): TerminalNode { return this.getToken(mdParser.RSBRACKET, 0); }
	public LRBRACKET(): TerminalNode { return this.getToken(mdParser.LRBRACKET, 0); }
	public url(): UrlContext {
		return this.getRuleContext(0, UrlContext);
	}
	public RRBRACKET(): TerminalNode { return this.getToken(mdParser.RRBRACKET, 0); }
	public WS(): TerminalNode { return this.getToken(mdParser.WS, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return mdParser.RULE_link; }
	// @Override
	public enterRule(listener: mdParserListener): void {
		if (listener.enterLink) {
			listener.enterLink(this);
		}
	}
	// @Override
	public exitRule(listener: mdParserListener): void {
		if (listener.exitLink) {
			listener.exitLink(this);
		}
	}
	// @Override
	public accept<Result>(visitor: mdParserVisitor<Result>): Result {
		if (visitor.visitLink) {
      console.log("??????????")
			return visitor.visitLink(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class UrlContext extends ParserRuleContext {
	public scheme(): SchemeContext {
		return this.getRuleContext(0, SchemeContext);
	}
	public COLON_DOUBLE_SLASH(): TerminalNode { return this.getToken(mdParser.COLON_DOUBLE_SLASH, 0); }
	public host(): HostContext {
		return this.getRuleContext(0, HostContext);
	}
	public login(): LoginContext | undefined {
		return this.tryGetRuleContext(0, LoginContext);
	}
	public COLON(): TerminalNode | undefined { return this.tryGetToken(mdParser.COLON, 0); }
	public port(): PortContext | undefined {
		return this.tryGetRuleContext(0, PortContext);
	}
	public SLASH(): TerminalNode | undefined { return this.tryGetToken(mdParser.SLASH, 0); }
	public query(): QueryContext | undefined {
		return this.tryGetRuleContext(0, QueryContext);
	}
	public frag(): FragContext | undefined {
		return this.tryGetRuleContext(0, FragContext);
	}
	public WS(): TerminalNode | undefined { return this.tryGetToken(mdParser.WS, 0); }
	public path(): PathContext | undefined {
		return this.tryGetRuleContext(0, PathContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return mdParser.RULE_url; }
	// @Override
	public enterRule(listener: mdParserListener): void {
		if (listener.enterUrl) {
			listener.enterUrl(this);
		}
	}
	// @Override
	public exitRule(listener: mdParserListener): void {
		if (listener.exitUrl) {
			listener.exitUrl(this);
		}
	}
	// @Override
	public accept<Result>(visitor: mdParserVisitor<Result>): Result {
		if (visitor.visitUrl) {
			return visitor.visitUrl(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class SchemeContext extends ParserRuleContext {
	public STRING(): TerminalNode { return this.getToken(mdParser.STRING, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return mdParser.RULE_scheme; }
	// @Override
	public enterRule(listener: mdParserListener): void {
		if (listener.enterScheme) {
			listener.enterScheme(this);
		}
	}
	// @Override
	public exitRule(listener: mdParserListener): void {
		if (listener.exitScheme) {
			listener.exitScheme(this);
		}
	}
	// @Override
	public accept<Result>(visitor: mdParserVisitor<Result>): Result {
		if (visitor.visitScheme) {
			return visitor.visitScheme(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class HostContext extends ParserRuleContext {
	public hostname(): HostnameContext {
		return this.getRuleContext(0, HostnameContext);
	}
	public SLASH(): TerminalNode | undefined { return this.tryGetToken(mdParser.SLASH, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return mdParser.RULE_host; }
	// @Override
	public enterRule(listener: mdParserListener): void {
		if (listener.enterHost) {
			listener.enterHost(this);
		}
	}
	// @Override
	public exitRule(listener: mdParserListener): void {
		if (listener.exitHost) {
			listener.exitHost(this);
		}
	}
	// @Override
	public accept<Result>(visitor: mdParserVisitor<Result>): Result {
		if (visitor.visitHost) {
			return visitor.visitHost(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

